# CodeExamples

Axes/: Axes.cpp  Axes.h  Axes.pro  main.cpp
PStatic/: UsedCameras.cpp  UsedCameras.h
Poisk2/: Core.js
Poisk2/SettingsPage/: Setting.qml  SettingSlider.qml  SettingsPage.js
Poisk2/SettingsPage/Component/: BulbRectangle.qml  SettingsPageLabel.qml  SettingsPageRadioButton.qml  SettingsPageWorkspace.qml  TestSoundButton.qml
Poisk2/SettingsPage/Radar/: ItemWithRadioButtons.qml  RadarSettingHideableLabel.qml  RadarSettingLabel.qml  RadarSettingWorkspace.qml  RadarSettingsRadioButton.qml  SensitivityRadioButton.qml  VelocityRadioButton.qml
Poisk2/SettingsPage/Record/: RecModeRadioButton.qml  RecordSettingWorkspace.qml  RecordSettingsLabel.qml  RecordSettingsRadioButton.qml  RecordSettingsSlider.qml  SettingSliderV2.qml
Poisk2/SettingsPage/Sound/: SounSettingsTableColumn.qml  SoundSettingFileDialog.qml  SoundSettingLabel.qml  SoundSettingWorkspace.qml  UpDownButton.qml
gps/: AbstractGpsPort.cpp  AbstractGpsPort.h  CMakeLists.txt  CheckSum.cpp  CheckSum.h  ComPortSettings.cpp  ComPortSettings.h  ComPorts.cpp  ComPorts.h  GgaSentence.cpp  GgaSentence.h  GllSentence.cpp  GllSentence.h  GpsConnection.cpp  GpsConnection.h  GpsPort.cpp  GpsPort.h  MockGpsPort.cpp  MockGpsPort.h  SentenceCommon.cpp  SentenceCommon.h
gps/cmake/: FindQtSerialPort.cmake
